--- a/src/registrar/templates/domain_your_contact_information.html
+++ b/src/registrar/templates/domain_your_contact_information.html
@@ -4,6 +4,7 @@
 {% block title %}Your contact information | {{ domain.name }} | {% endblock %}
 
 {% block domain_content %}
+  {% include "includes/form_errors.html" with form=form %}
 
   <h1>Your contact information</h1>
 
