--- a/src/registrar/templates/domain_security_email.html
+++ b/src/registrar/templates/domain_security_email.html
@@ -4,6 +4,7 @@
 {% block title %}Security email | {{ domain.name }} | {% endblock %}
 
 {% block domain_content %}
+  {% include "includes/form_errors.html" with form=form %}
 
   <h1>Security email</h1>
 
