updated domain app pages' required fields sentence

--- a/src/registrar/templates/application_org_federal.html
+++ b/src/registrar/templates/application_org_federal.html
@@ -8,7 +8,10 @@
 {% endblock %}
 
 {% block form_required_fields_help_text %}
-<p class="text-semibold"><abbr class="usa-hint usa-hint--required" title="required">*</abbr> This question is required.</p>
+  <p class="margin-top-3">
+    <i>Required fields are marked with an asterisk (<abbr class="usa-hint usa-hint--required"
+        title="required">*</abbr>).</i>
+  </p>
 {% endblock %}
 
 
