--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -47,7 +47,10 @@
     these initial checks, we’ll verify that it meets all of our requirements once you
     complete and submit the rest of this form.</p>
 
-    <p class="text-semibold"><abbr class="usa-hint usa-hint--required" title="required">*</abbr> This question is required.</p>
+      <p class="margin-top-3">
+        <i>Required fields are marked with an asterisk (<abbr class="usa-hint usa-hint--required"
+            title="required">*</abbr>).</i>
+      </p>
 
     {% with attr_aria_describedby="domain_instructions domain_instructions2" %}
       {# attr_validate / validate="domain" invokes code in get-gov.js #}
