--- a/src/registrar/templates/application_purpose.html
+++ b/src/registrar/templates/application_purpose.html
@@ -13,7 +13,11 @@ Read about <a class="usa-link" rel="noopener noreferrer" target="_blank" href="{
 {% endblock %}
 
 {% block form_required_fields_help_text %}
-  <p class="text-semibold"><abbr class="usa-hint usa-hint--required" title="required">*</abbr> This question is required.</p>
+  <p class="margin-top-3">
+    <i>Required fields are marked with an asterisk (<abbr class="usa-hint usa-hint--required"
+        title="required">*</abbr>).</i>
+  </p>
+
 {% endblock %}
 
 
