--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -38,19 +38,13 @@
 
   <fieldset class="usa-fieldset margin-top-2">
     <legend>
-      <h2>What .gov domain do you want?&nbsp;<abbr class="usa-hint usa-hint--required
-          text-super" title="required">*</abbr></h2>
+      <h2>What .gov domain do you want?</h2>
     </legend>
 
     <p id="domain_instructions" class="margin-top-05">After you enter your domain, we’ll make sure it’s
     available and that it meets some of our naming requirements. If your domain passes
     these initial checks, we’ll verify that it meets all of our requirements once you
     complete and submit the rest of this form.</p>
-
-      <p class="margin-top-3">
-        <i>Required fields are marked with an asterisk (<abbr class="usa-hint usa-hint--required"
-            title="required">*</abbr>).</i>
-      </p>
 
     {% with attr_aria_describedby="domain_instructions domain_instructions2" %}
       {# attr_validate / validate="domain" invokes code in get-gov.js #}
@@ -69,7 +63,7 @@
 
   <fieldset class="usa-fieldset margin-top-1">
     <legend>
-      <h2>Alternative domains</h2>
+      <h2>Alternative domains (optional)</h2>
     </legend>
 
     <p id="alt_domain_instructions" class="margin-top-05">Are there other domains you’d like if we can’t give
