update .gov domain page

--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -67,7 +67,7 @@
     </legend>
 
     <p id="alt_domain_instructions" class="margin-top-05">Are there other domains you’d like if we can’t give
-    you your first choice? Entering alternative domains is optional.</p>
+    you your first choice?</p>
 
     {% with attr_aria_describedby="alt_domain_instructions" %}
       {# attr_validate / validate="domain" invokes code in get-gov.js #}
