--- a/src/registrar/templates/application_org_election.html
+++ b/src/registrar/templates/application_org_election.html
@@ -3,20 +3,13 @@
 
 {% block form_instructions %}
   <h2 class="margin-bottom-05">
-    Is your organization an election office?  <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    Is your organization an election office?
   </h2>
 
   <p>An election office is a government entity whose <em>primary</em> responsibility is overseeing elections and/or conducting voter registration.</p>
 
   <p>Answer “yes” only if the <em>main purpose</em> of your organization is to serve as an election office.</p>
 
-{% endblock %}
-
-{% block form_required_fields_help_text %}
-    <p class="margin-top-3">
-      <i>Required fields are marked with an asterisk (<abbr class="usa-hint usa-hint--required"
-          title="required">*</abbr>).</i>
-    </p>
 {% endblock %}
 
 {% block form_fields %}
