--- a/src/registrar/templates/application_org_type.html
+++ b/src/registrar/templates/application_org_type.html
@@ -3,16 +3,9 @@
 
 {% block form_instructions %}
   <h2 class="margin-bottom-05">
-    What kind of U.S.-based government organization do you represent? <abbr class="usa-hint usa-hint--required text-super" title="required">*</abbr>
+    What kind of U.S.-based government organization do you represent?
   </h2>
 
-{% endblock %}
-
-{% block form_required_fields_help_text %}
-  <p class="margin-top-3">
-    <i>Required fields are marked with an asterisk (<abbr class="usa-hint usa-hint--required"
-        title="required">*</abbr>).</i>
-  </p>
 {% endblock %}
 
 
