--- a/src/registrar/templates/application_org_federal.html
+++ b/src/registrar/templates/application_org_federal.html
@@ -3,15 +3,8 @@
 
 {% block form_instructions %}
   <h2 class="margin-bottom-05">
-    Which federal branch is your organization&nbsp;in?&nbsp;<abbr class="usa-hint usa-hint--required text-super" title="required">*</abbr>
+    Which federal branch is your organization in?
   </h2>
-{% endblock %}
-
-{% block form_required_fields_help_text %}
-  <p class="margin-top-3">
-    <i>Required fields are marked with an asterisk (<abbr class="usa-hint usa-hint--required"
-        title="required">*</abbr>).</i>
-  </p>
 {% endblock %}
 
 
