--- a/src/registrar/templates/application_about_your_organization.html
+++ b/src/registrar/templates/application_about_your_organization.html
@@ -12,6 +12,10 @@
   </p>
 {% endblock %}
 
+{% block form_required_fields_help_text %}
+{# commented out so it does not appear on this page #}
+{% endblock %}
+
 {% block form_fields %}
     {% with attr_maxlength=1000 add_label_class="usa-sr-only" %}
       {% input_with_errors forms.0.about_your_organization %}
