--- a/src/registrar/templates/application_org_federal.html
+++ b/src/registrar/templates/application_org_federal.html
@@ -7,6 +7,9 @@
   </h2>
 {% endblock %}
 
+{% block form_required_fields_help_text %}
+{# commented out so it does not appear on this page #}
+{% endblock %}
 
 {% block form_fields %}
   {% with add_class="usa-radio__input--tile"  add_legend_class="usa-sr-only" %}
