testing way to get rid of asterisk

--- a/src/registrar/templates/django/forms/label.html
+++ b/src/registrar/templates/django/forms/label.html
@@ -8,6 +8,8 @@
     {{ field.label }}
   {% endif %}
   {% if widget.attrs.required %}
-    <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    {% if widget.label != "I read and agree to the requirements for operating .gov domains." %}
+      <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    {% endif %}
   {% endif %}
 </{{ label_tag }}>
