--- a/src/registrar/templates/django/forms/label.html
+++ b/src/registrar/templates/django/forms/label.html
@@ -7,4 +7,9 @@
   {% else %}
     {{ field.label }}
   {% endif %}
+  <!---
+    {% if widget.attrs.required %}
+      <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    {% endif %}
+  -->
 </{{ label_tag }}>
