--- a/src/registrar/templates/django/forms/label.html
+++ b/src/registrar/templates/django/forms/label.html
@@ -7,9 +7,10 @@
   {% else %}
     {{ field.label }}
   {% endif %}
-  <!---
     {% if widget.attrs.required %}
-      <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+      {% if widget.label != "What is the name of the tribe you represent? " %}
+        <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+      {% endif %}
     {% endif %}
-  -->
+
 </{{ label_tag }}>
