--- a/src/registrar/templates/django/forms/label.html
+++ b/src/registrar/templates/django/forms/label.html
@@ -9,7 +9,10 @@
   {% endif %}
     {% if widget.attrs.required %}
       {% if field.label != "I read and agree to the requirements for operating .gov domains." %}
-        <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+        {% if field.label != "Please explain why there are no other employees from your organization we can contact to help us assess your
+        eligibility for a .gov domain." %}
+            <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+        {% endif %}
       {% endif %}
     {% endif %}
 
