get rid of asterisk in no other contacts page

--- a/src/registrar/templates/django/forms/label.html
+++ b/src/registrar/templates/django/forms/label.html
@@ -8,7 +8,8 @@
     {{ field.label }}
   {% endif %}
     {% if widget.attrs.required %}
-      {% if field.label != "I read and agree to the requirements for operating .gov domains." %}
+      {% if field.label != "I read and agree to the requirements for operating .gov domains." or field.label != "Please explain why there are no other employees from your organization we can contact to help us assess your
+      eligibility for a .gov domain." %}
             <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
       {% endif %}
     {% endif %}
