--- a/src/registrar/templates/includes/summary_item.html
+++ b/src/registrar/templates/includes/summary_item.html
@@ -85,7 +85,7 @@
       {% endif %}
     </div>
 
-    {% if edit_link %}
+    {% if editable and edit_link %}
       <div class="text-right">
       <a
           href="{{ edit_link }}"
