trying another way to get rid of asterisk in one-field forms

--- a/src/registrar/templates/django/forms/label.html
+++ b/src/registrar/templates/django/forms/label.html
@@ -7,10 +7,11 @@
   {% else %}
     {{ field.label }}
   {% endif %}
-    {% if widget.attrs.required %}
-      {% if field.label != "I read and agree to the requirements for operating .gov domains." %}
-        <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
-      {% endif %}
+
+  {% if widget.attrs.required %}
+    {% if field.label == "I read and agree to the requirements for operating .gov domains." %}
+      <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
     {% endif %}
+  {% endif %}
 
 </{{ label_tag }}>
