--- a/src/registrar/templates/django/forms/label.html
+++ b/src/registrar/templates/django/forms/label.html
@@ -7,11 +7,12 @@
   {% else %}
     {{ field.label }}
   {% endif %}
-
-  {% if widget.attrs.required %}
-    {% if field.label == "I read and agree to the requirements for operating .gov domains." %}
-      <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    {% if widget.attrs.required %}
+      {% if field.label != "I read and agree to the requirements for operating .gov domains." %}
+        {% if field.label != "Please explain why there are no other employees from your organization" %}
+            <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+        {% endif %}
+      {% endif %}
     {% endif %}
-  {% endif %}
 
 </{{ label_tag }}>
