Change "Add another user" to "Add a domain manager"

--- a/src/registrar/templates/domain_add_user.html
+++ b/src/registrar/templates/domain_add_user.html
@@ -4,10 +4,10 @@
 {% block title %}Add another user{% endblock %}
 
 {% block domain_content %}
-  <h1>Add another user</h1>
+  <h1>Add a domain manager</h1>
 
   <p>You can add another user to help manage your domain. They will need to sign
-  into the .gov registrar with their Login.gov account.
+  in to the .gov registrar with their Login.gov account.
   </p>
 
   <form class="usa-form usa-form--large" method="post" novalidate>
