Changed domain management sidebar nav for DNS items

--- a/src/registrar/templates/domain_sidebar.html
+++ b/src/registrar/templates/domain_sidebar.html
@@ -24,7 +24,7 @@
             <a href="{{ url }}"
               {% if request.path == url %}class="usa-current"{% endif %}
             >
-                Name servers
+                DNS name servers
             </a>
           </li>
 
@@ -43,7 +43,7 @@
                   <a href="{{ url }}"
                     {% if request.path == url %}class="usa-current"{% endif %}
                   >
-                      DS Data
+                      DS data
                   </a>
                 </li>
               </ul>
