--- a/src/registrar/templates/django/forms/label.html
+++ b/src/registrar/templates/django/forms/label.html
@@ -8,9 +8,14 @@
     {{ field.label }}
   {% endif %}
 
+  <!-- One-field forms (pages that only have one question field) do not have an asterisk -->
   {% if widget.attrs.required %}
-    {% if field.label == "I read and agree to the requirements for operating .gov domains." %}
-      <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    {% if field.label != "I read and agree to the requirements for operating .gov domains." %}
+      {% if field.label != “What .gov domain do you want?” %}
+        {% if field.label != “"Is your organization an election office?"” %}
+          <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+        {% endif %}
+      {% endif %}
     {% endif %}
   {% endif %}
 
