--- a/src/registrar/templates/django/forms/label.html
+++ b/src/registrar/templates/django/forms/label.html
@@ -8,10 +8,51 @@
     {{ field.label }}
   {% endif %}
 
+
+{% if widget.attrs.required %}
+  {% if field.label != "Is your organization an election office?" and 
+  field.label != “What .gov domain do you want?” and 
+  field.label != "I read and agree to the requirements for operating .gov domains." %}
+    <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+  {% endif %}
+{% endif %}
+
+  <!--
   {% if widget.attrs.required %}
-    {% if field.label == "I read and agree to the requirements for operating .gov domains." %}
+    {% if field.label == "What is the name of the tribe you represent? “ %}
       <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
     {% endif %}
+    {% if field.label == "Organization name" %}
+    <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    {% endif %}
+    {% if field.label == "Street address" %}
+    <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    {% endif %}
+    {% if field.label == "City" %}
+    <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    {% endif %}
+    {% if field.label == "State, territory, or military post" %}
+    <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    {% endif %}
+    {% if field.label == "Zip code" %}
+    <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    {% endif %}
+    {% if field.label == "First name / given name" %}
+    <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    {% endif %}
+    {% if field.label == "Last name / family name" %}
+    <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    {% endif %}
+    {% if field.label == "Title or role in your organization" %}
+    <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    {% endif %}
+    {% if field.label == "Email" %}
+    <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    {% endif %}
+    {% if field.label == "Phone" %}
+    <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
+    {% endif %}
   {% endif %}
+  -->
 
 </{{ label_tag }}>
