fixing syntax again

--- a/src/registrar/templates/django/forms/label.html
+++ b/src/registrar/templates/django/forms/label.html
@@ -10,7 +10,7 @@
 
   {% if widget.attrs.required %}
     <!--Don't include asterisk in one-field forms-->
-    {% if field.label != "Is your organization an election office?" or field.label != "What .gov domain do you want?" or field.label != "I read and agree to the requirements for operating .gov domains." %}
+    {% if field.label != "Is your organization an election office?" or field.label != "What .gov domain do you want?"" or field.label != "I read and agree to the requirements for operating .gov domains." %}
       <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
     {% endif %}
   {% endif %}
