trying a different approach

--- a/src/registrar/templates/application_org_election.html
+++ b/src/registrar/templates/application_org_election.html
@@ -2,9 +2,7 @@
 {% load field_helpers %}
 
 {% block form_instructions %}
-  <h2 class="margin-bottom-05">
-    Is your organization an election office?
-  </h2>
+  <h2 class="margin-bottom-05">Is your organization an election office?</h2>
 
   <p>An election office is a government entity whose <em>primary</em> responsibility is overseeing elections and/or conducting voter registration.</p>
 
