--- a/src/registrar/assets/sass/_theme/_register-form.scss
+++ b/src/registrar/assets/sass/_theme/_register-form.scss
@@ -78,3 +78,9 @@
   font-weight: font-weight('semibold');
   margin-bottom: units(0.5);
 }
+
+.review__step__subheading {
+  color: color('primary-dark');
+  font-weight: font-weight('semibold');
+  margin-bottom: units(0.5);
+}
