Change "Active users" to "Domain managers" on domain managers page

--- a/src/registrar/templates/domain_users.html
+++ b/src/registrar/templates/domain_users.html
@@ -25,8 +25,8 @@
   {% if domain.permissions %}
   <section class="section--outlined">
   <table class="usa-table usa-table--borderless usa-table--stacked dotgov-table--stacked dotgov-table">
-    <h2 class> Active users </h2>
-    <caption class="sr-only">Domain users</caption>
+    <h2 class> Domain managers </h2>
+    <caption class="sr-only">Domain managers</caption>
     <thead>
       <tr>
         <th data-sortable scope="col" role="columnheader">Email</th>
