added (optional) text to org contact and emphasized required fields sentence

--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -24,7 +24,7 @@
   {% for form in forms.0.forms %}
     <fieldset class="usa-fieldset">
       <legend>
-        <h2>Organization contact {{ forloop.counter }}</h2>
+        <h2>Organization contact {{ forloop.counter }} (optional)</h2>
       </legend>
 
       {% input_with_errors form.first_name %}
