--- a/src/registrar/templates/includes/required_fields.html
+++ b/src/registrar/templates/includes/required_fields.html
@@ -1,3 +1,3 @@
   <p class="margin-top-3">
-    <i>Required fields are marked with an asterisk (<abbr class="usa-hint usa-hint--required" title="required">*</abbr>).</i>
+    <em>Required fields are marked with an asterisk (<abbr class="usa-hint usa-hint--required" title="required">*</abbr>).</em>
   </p>
