include required fields sentence in Other Contacts page

--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -13,10 +13,8 @@
 {% endblock %}
 
 {% block form_required_fields_help_text %}
-{# there are no required fields on this page so don't show this #}
+{% include "includes/required_fields.html" %}
 {% endblock %}
-
-
 
 {% block form_fields %}
   {{ forms.0.management_form }}
