combo box for both user and domain in UserDomainRole change form

--- a/src/registrar/assets/sass/_theme/_admin.scss
+++ b/src/registrar/assets/sass/_theme/_admin.scss
@@ -247,6 +247,7 @@ h1, h2, h3 {
 }
 
 // Combo box
-#select2-id_domain-results {
+#select2-id_domain-results,
+#select2-id_user-results {
     width: 100%;
 }
