--- a/src/registrar/templates/application_anything_else.html
+++ b/src/registrar/templates/application_anything_else.html
@@ -2,7 +2,7 @@
 {% load field_helpers %}
 
 {% block form_instructions %}
-  <p>Is there anything else we should know about your domain request?</p>
+  <h2>Is there anything else we should know about your domain request? (optional)</h2>
 {% endblock %}
 
 {% block form_required_fields_help_text %}
