--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -111,7 +111,7 @@
 
     {% include "includes/summary_item.html" with title='Other employees from your organization' value=domainapplication.other_contacts.all contact='true' list='true' heading_level=heading_level %}
 
-    {% include "includes/summary_item.html" with title='Anything else we should know' value=domainapplication.anything_else|default:"No" heading_level=heading_level %}
+    {% include "includes/summary_item.html" with title='Anything else?' value=domainapplication.anything_else|default:"No" heading_level=heading_level %}
 
   {% endwith %}
   </div>
