remove (optional) from security email title and put it in label instead

--- a/src/registrar/templates/domain_security_email.html
+++ b/src/registrar/templates/domain_security_email.html
@@ -6,7 +6,7 @@
 {% block domain_content %}
   {% include "includes/form_errors.html" with form=form %}
 
-  <h1>Security email (optional)</h1>
+  <h1>Security email</h1>
 
   <p>We strongly recommend that you provide a security email. This email will allow the  public to report observed or suspected security issues on your domain. Security emails are made public and included in the <a class="usa-link" rel="noopener noreferrer" target="_blank" href="{% public_site_url 'about/data/' %}">.gov domain data</a> we provide.</p>
 
