--- a/src/registrar/templates/application_current_sites.html
+++ b/src/registrar/templates/application_current_sites.html
@@ -2,9 +2,9 @@
 {% load static field_helpers %}
 
 {% block form_instructions %}
-  <p>Optionally, enter your organization’s current public website, if you have one. For example,
+  <p>Enter your organization’s current public website, if you have one. For example,
   www.city.com. We can better evaluate your domain request if we know about domains 
-you’re already using. If you already have any .gov domains please include them.</p>
+you’re already using. If you already have any .gov domains please include them. This question is optional.</p>
 {% endblock %}
 
 {% block form_required_fields_help_text %}
