--- a/src/registrar/templates/application_form.html
+++ b/src/registrar/templates/application_form.html
@@ -48,12 +48,12 @@
 {% block form_instructions %}
 {% endblock %}
 
-{% block form_required_fields_help_text %}
 <!-- The "No other employees from your organization?" page is a one-field form and should not have the required fields sentence -->
-  {% if field.label != "Please explain why there are no other employees from your organization we can contact to help us assess your eligibility for a .gov domain." %}
+{% if steps.current != "no_other_contacts" %}
+  {% block form_required_fields_help_text %}
     {% include "includes/required_fields.html" %}
-  {% endif %}
-{% endblock %}
+  {% endblock %}
+{% endif %}
 
         <form id="step__{{steps.current}}" class="usa-form usa-form--large" method="post" novalidate>
           {% csrf_token %}
