Change to sentence case

--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -31,7 +31,7 @@
              Status:
           </span>
           {% if domainapplication.status == 'approved' %} Approved 
-          {% elif domainapplication.status == 'in review' %} In Review 
+          {% elif domainapplication.status == 'in review' %} In review 
           {% elif domainapplication.status == 'rejected' %} Rejected
           {% elif domainapplication.status == 'submitted' %} Submitted
           {% elif domainapplication.status == 'ineligible' %} Ineligible
