layout and CSS for the back to manage domains button

--- a/src/registrar/assets/sass/_theme/styles.scss
+++ b/src/registrar/assets/sass/_theme/styles.scss
@@ -9,6 +9,7 @@
 /*--------------------------------------------------
 --- Custom Styles ---------------------------------*/
 @forward "base";
+@forward "nav-primary";
 @forward "typography";
 @forward "buttons";
 @forward "forms";
