--- a/src/registrar/assets/sass/_theme/_buttons.scss
+++ b/src/registrar/assets/sass/_theme/_buttons.scss
@@ -7,6 +7,17 @@ a[href$="todo"]::after {
   content: " [link TBD]";
   font-style: italic;
 }
+
+a.manage_domain_back {
+  // Slight vertical and horizontal alignment fixes
+  position: relative;
+  top: -2px;
+  left: -5px;
+  font-weight: bold;
+  &:visited {
+    color: color('primary');
+  }
+}
   
 a.breadcrumb__back {
   display:flex;
