Only have Manage Your Domains show up on Domain Overview page

--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -1,5 +1,7 @@
 <!doctype html>{# keep this on the first line #}
 {% load i18n static %}
+{% load static url_helpers %}
+
 <html class="no-js" lang="{{ LANGUAGE_CODE }}">
 
 <head>
@@ -148,13 +150,16 @@
           {% block logo %}
             <div class="usa-logo display-inline-block" id="extended-logo">
               <strong class="usa-logo__text" >
-                <a href="{% url 'home' %}"> .gov </a>
+                <a href="{% url 'home' %}"> .gov</a>
               </strong>    
             </div>
           {% endblock %}
-          <a class="margin-left-3 manage_domain_back" href="{% url 'home' %}">
+          {% url 'domain' pk=domain.id as url %} 
+          {% if request.path == url %}
+            <a class="margin-left-3 manage_domain_back" href="{% url 'home' %}">
             Manage your domains
-          </a>
+            </a> 
+          {% endif %}
         </div>
         <button type="button" class="usa-menu-btn">Menu</button>
       </div>
