--- a/src/registrar/assets/sass/_theme/_base.scss
+++ b/src/registrar/assets/sass/_theme/_base.scss
@@ -38,6 +38,10 @@ body {
   color: color('primary-darker');
 }
 
+.usa-nav__primary {
+  margin-top:units(1);
+}
+
 .section--outlined {
   background-color: color('white');
   border: 1px solid color('base-lighter');
