--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -27,7 +27,7 @@
             <address class="usa-footer__address">
               <div class="usa-footer__contact-info grid-row grid-gap-md">
                 <div class="grid-col-auto">
-                  <a class="usa-link" rel="noopener noreferrer" target="_blank" href="{% url 'home' %}">Manage your domains</a>
+                  <a class="usa-link" rel="noopener noreferrer" href="{% url 'home' %}">Manage your domains</a>
                 </div>
                 <span class=""> | </span>
                 <div class="grid-col-auto">
