Home instead of Manage, thank you Katherine

--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %} Manage | {% endblock %}
+{% block title %} Home | {% endblock %}
 
 {% block content %}
 <main id="main-content" class="grid-container">
