Add pipes on all pages

--- a/src/registrar/templates/application_done.html
+++ b/src/registrar/templates/application_done.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Thanks for your domain request!{% endblock %}
+{% block title %}Thanks for your domain request! | {% endblock %}
 
 {% block content %}
 <main id="main-content" class="grid-container register-form-step">
