--- a/src/registrar/templates/application_withdraw_confirmation.html
+++ b/src/registrar/templates/application_withdraw_confirmation.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Withdraw request for {{ domainapplication.requested_domain.name }}{% endblock %}
+{% block title %}Withdraw request for {{ domainapplication.requested_domain.name }} | {% endblock %}
 {% load static url_helpers %}
 
 {% block content %}
