--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -149,7 +149,7 @@
           {% block logo %}
             <div class="usa-logo display-inline-block" id="extended-logo">
               <strong class="usa-logo__text" >
-                <a href="{% url 'home' %}">.gov registrar </a>
+                <a href="{% url 'home' %}">.gov Registrar </a>
               </strong>    
             </div>
           {% endblock %}
