--- a/src/registrar/templates/profile.html
+++ b/src/registrar/templates/profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Edit your User Profile
+Edit your User Profile |
 {% endblock title %}
 
 {% block content %}
