--- a/src/registrar/templates/domain_add_user.html
+++ b/src/registrar/templates/domain_add_user.html
@@ -1,7 +1,7 @@
 {% extends "domain_base.html" %}
 {% load static field_helpers %}
 
-{% block title %}Add another user{% endblock %}
+{% block title %}Add another user | {% endblock %}
 
 {% block domain_content %}
   <h1>Add a domain manager</h1>
