--- a/src/registrar/templates/domain_sidebar.html
+++ b/src/registrar/templates/domain_sidebar.html
@@ -44,7 +44,7 @@
                   <a href="{{ url }}"
                     {% if request.path == url %}class="usa-current"{% endif %}
                   >
-                      DS Data
+                      DS data
                   </a>
                 </li>
               </ul>
