made a non-impactful change just so I can create a PR

--- a/src/registrar/templates/application_about_your_organization.html
+++ b/src/registrar/templates/application_about_your_organization.html
@@ -2,6 +2,7 @@
 {% load field_helpers %}
 
 {% block form_instructions %}
+<!--PLEASE IGNORE THIS COMMENT-->
   <p>We’d like to know more about your organization. Include the following in your response: </p>
   
     <ul class="usa-list">
