--- a/src/registrar/templates/includes/domain_dates.html
+++ b/src/registrar/templates/includes/domain_dates.html
@@ -1,5 +1,10 @@
-
+{% if domain.expiration_date or domain.created_at %}
 <div>
-    Expires: {{ expiration_date }}
-    Date created: {{ creation_date }}
+{% if domain.expiration_date %}Expires: 
+  {{ domain.expiration_date|date:"Y-m-d" }}
+  {% if domain.is_expired %} (expired){% endif %}
+  <br/>
+  {% endif %}
+  {% if domain.created_at %}Date created: {{ domain.created_at|date:"Y-m-d" }}{% endif %}
 </div>
+{% endif %}
